--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "fernjit"
 version = "0.1.0"
 edition = "2021"
+license-file = "LICENSE"
+
+[features]
+validate = []
 
 [dependencies]
 libc = "0.2.155"
