--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Rust Caching
         uses: Swatinem/rust-cache@v2.7.3
+      - name: Install dependencies
+        run: make deps
       - name: Build
         run: make build
       - name: Test
