--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ libc = "0.2.155"
 num-traits = "0.2.19"
 paste = "1.0.15"
 static_assertions = "1.1.0"
+derive_more = { version = "1", features = ["deref", "deref_mut", "add"] }
