--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Code Style
 
 on:
   pull_request:
@@ -11,10 +11,7 @@ env:
 
 jobs:
   build_and_test:
-    strategy:
-      matrix:
-        os: [macos-14, macos-14, macos-13, ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Rust Caching
