--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
-[package]
-name = "fernjit"
+[workspace]
+members = ["fern", "jit"]
+resolver = "2"
+
+[workspace.package]
 version = "0.0.0"
 edition = "2021"
 license-file = "LICENSE"
 
-[features]
-validate = []
-
-[dependencies]
-libc = "0.2.155"
+[workspace.dependencies]
+libc = "0.2.167"
 paste = "1.0.15"
 static_assertions = "1.1.0"
