--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -1,3 +1,11 @@
+"Code: VM":
+  - changed-files:
+      - any-glob-to-any-file: "fern/**"
+
+"Code: JIT":
+  - changed-files:
+      - any-glob-to-any-file: "jit/**"
+
 "Infra: CI":
   - changed-files:
       - any-glob-to-any-file: ".github/workflows/*"
