--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["fern", "jit"]
+members = ["enum_tags", "fern", "jit"]
 resolver = "2"
 
 [workspace.package]
@@ -11,3 +11,6 @@ license-file = "LICENSE"
 libc = "0.2.167"
 paste = "1.0.15"
 static_assertions = "1.1.0"
+syn = "2.0.90"
+quote = "1.0.37"
+proc-macro2 = "1.0.92"
