--- a/.github/labeler.yaml
+++ b/.github/labeler.yaml
@@ -6,6 +6,10 @@
   - changed-files:
       - any-glob-to-any-file: "jit/**"
 
+"Code: enum_tags":
+  - changed-files:
+      - any-glob-to-any-file: "enum_tags/**"
+
 "Infra: CI":
   - changed-files:
       - any-glob-to-any-file: ".github/workflows/*"
