--- a/fern/Cargo.toml
+++ b/fern/Cargo.toml
@@ -4,10 +4,8 @@ version.workspace = true
 edition.workspace = true
 license-file.workspace = true
 
-[features]
-validate = []
-
 [dependencies]
 paste.workspace = true
 static_assertions.workspace = true
+num-traits.workspace = true
 enum_tags = { path = "../enum_tags/" }
