--- a/enum_tags/Cargo.toml
+++ b/enum_tags/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "enum_tags"
+name = "fern-enum-tags"
 description = "Variant tags for enums with fields too"
 repository.workspace = true
 version.workspace = true
