--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ static_assertions = "1.1.0"
 syn = "2.0.90"
 quote = "1.0.37"
 proc-macro2 = "1.0.92"
+enum_tags = { path = "enum_tags/", package = "fern-enum-tags", version = "0.0.0" }
