--- a/fern/Cargo.toml
+++ b/fern/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "fern-vm"
+description = "The fern bytecode runtime"
+repository.workspace = true
+readme.workspace = true
 version.workspace = true
 edition.workspace = true
 license-file.workspace = true
