fix: Publish to `crates.io` (#20)
* Rename (#19)

* enum_tags

* more rename

* More rename

* Move enum_tags to workspace

* Add readme

* COmmit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = ["enum_tags", "fern", "jit"]
 resolver = "2"
 
 [workspace.package]
+repository = "https://github.com/ethanuppal/fernjit"
+readme = "README.md"
 version = "0.0.0"
 edition = "2021"
 license-file = "LICENSE"
@@ -14,3 +16,4 @@ static_assertions = "1.1.0"
 syn = "2.0.90"
 quote = "1.0.37"
 proc-macro2 = "1.0.92"
+enum_tags = { path = "enum_tags/", package = "fern-enum-tags", version = "0.0.0" }
