--- a/fern/Cargo.toml
+++ b/fern/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "fern-vm"
+description = "The fern bytecode runtime"
+repository.workspace = true
+readme.workspace = true
 version.workspace = true
 edition.workspace = true
 license-file.workspace = true
@@ -10,4 +13,4 @@ validate = []
 [dependencies]
 paste.workspace = true
 static_assertions.workspace = true
-enum_tags = { path = "../enum_tags/" }
+enum_tags.workspace = true
