--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ license-file = "LICENSE"
 libc = "0.2.167"
 paste = "1.0.15"
 static_assertions = "1.1.0"
-syn = "2.0.90"
+syn = { version = "2.0.90", features = ["parsing"] }
 quote = "1.0.37"
 proc-macro2 = "1.0.92"
+num-traits = "0.2.19"
 enum_tags = { path = "enum_tags/", package = "fern-enum-tags", version = "0.0.0" }
