--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  CARGO_INCREMENTAL: 0
 
 jobs:
   build_and_test:
@@ -19,7 +20,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Rust Caching
         uses: Swatinem/rust-cache@v2.7.3
-      - name: Install dependencies
-        run: make deps
-      - name: Lint
-        run: make lint
+      - name: Test
+        run: cargo test
