--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -21,5 +21,5 @@ jobs:
         run: make deps
       - name: Check coverage
         run: make test_cov_vm COVERALLS=${{ secrets.COVERALLS_REPO_TOKEN }}
-      - name: Coveralls
-        uses: coverallsapp/github-action@v2
+      # - name: Coveralls
+      #   uses: coverallsapp/github-action@v2
